# DonorTracker

./: .gitignore  Agriculture  Australia_4_bimulti.csv  Australia_5B_income.csv  Australia_5C_region.csv  Australia_6A_region.csv  Australia_GH2_trend.csv  Austria_5B_income.csv  Austria_5d_recipient.csv  Austria_6A_region.csv  Austria_GH2_trend.csv  Belgium_5B_income.csv  Belgium_6A_region.csv  Belgium_GH2_trend.csv  Canada_5B_income.csv  Canada_5d_recipient.csv  Canada_6A_region.csv  Canada_GH2_trend.csv  Denmark_5B_income.csv  Denmark_5C_region.csv  Denmark_6A_region.csv  Denmark_GH2_trend.csv  EU Institutions_5B_income.csv  EU Institutions_6A_region.csv  Finland_5B_income.csv  Finland_5d_recipient.csv  Finland_6A_region.csv  Finland_GH2_trend.csv  France_5B_income.csv  France_5d_recipient.csv  France_6A_region.csv  France_GH2_trend.csv  Germany_4_bimulti.csv  Germany_5B_income.csv  Germany_5d_recipient.csv  Germany_6A_region.csv  Germany_EMEEA_10A_channel.csv  Germany_EMEEA_4A_bi-multi.csv  Germany_GH2_trend.csv  Ireland_5B_income.csv  (+52 more)
Agriculture/: AG_sector_aggregate.csv  AG_trend_aggregate.csv  Ag_DonorRanking.csv  Aggregate_AG_Funding.csv  Australia_AG2_trend.csv  Australia_AG3_sector.csv  Australia_AG4a_multi.csv  Austria_AG2_trend.csv  Austria_AG3_sector.csv  Austria_AG4a_multi.csv  Belgium_AG2_trend.csv  Belgium_AG3_sector.csv  Belgium_AG4a_multi.csv  Canada_AG2_trend.csv  Canada_AG3_sector.csv  Canada_AG4a_multi.csv  Canada_AgFunding_ByDonor.csv  Canada_RecipientRegion_AgRanking.csv  Czechia_AG2_trend.csv  Czechia_AG3_sector.csv  Czechia_AG4a_multi.csv  (+99 more)
(+1470 files in other folders)
